--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Final Project Proposal</title>
+    </head>
+    <body>
+        <p2>Product Name: Tic Tac Toe in HTML<br></p2>
+        <p2><br>Team Members: Ryan O'Connor<br></p2>
+        <p2><br>Proposal Last Updated: 11/7/21<br></p2>
+        <p2><br>Application Overview: The user will go to the webpage and see a tic tac toe board. It will begin with X each time and then switch back and forth each time another move is made. Until either x or o wins, at which point the webpage will either say, draw, x wins, or o wins.<br></p2>
+        <p2><br>Technology Overview: The project will use HTML, CSS, and JS. It will work on both desktop and mobile browsers, be hosted on AZURE, and I am not sure which libraries will be needed at this point.<br></p2>
+        <p2><br>Feature List: X and O inputs, win lose, and draw outcomes, support for mobile and desktop.<br></p2>
+        <p2><br>Future Feature List: Usernames, leaderboard of who has played and won the most games, diferent built in color themes.<br></p2>
+        <p2><br>Basic Technical Features: CSS styling and deploying a website to the internet.<br></p2>
+        <p2><br>Advanced Technical Features: Use of JS for scripted events, aswell as optimization for a mobile device.<br></p2>
+    </body>
+</html>
